docs: обновлена документация агентов - исправлены упоминания BACK-JAVA на BACK-GO и информация о новом скрипте generate-openapi-microservices.ps1